# arch-index

./: .gitignore  .metrics-accept  CHANGELOG.md  README.md  SPEC-sound-callgraph.md  arch-body-compare  arch-callgraph-go  arch-callgraph-ocaml  arch-compare  arch-coverage-load  arch-index  arch-index.opam  arch-load  arch-mcp  arch-query  architecture-schema.sql  build.sh  capabilities-schema-migration.sql  dune  dune-project  effects-schema-migration.sql  metrics-baseline.json  selftest-callgraph-go.sh  selftest-callgraph-ocaml.sh  selftest-callgraph-soundness.sh  selftest-contract.sh  selftest-effects.sh  selftest-health.sh  selftest-load.sh  selftest-mcp.sh
briefs/: arch-gardening-queries-impl.md  arch-gardening-queries-implementer.md  arch-gardening-queries-intake.md  arch-gardening-queries-plan.json  arch-gardening-queries-plan.md  arch-gardening-queries-qa-scope.md  arch-gardening-queries-qa.md  arch-gardening-queries-review.json  arch-gardening-queries-reviewer.md  arch-gardening-queries-ship-gate.md  arch-gardening-queries-spec.md  arch-gardening-queries-state.json  arch-health-queries-impl.md  arch-health-queries-implementer.md  arch-health-queries-intake.md  arch-health-queries-plan.json  arch-health-queries-plan.md  arch-health-queries-qa-scope.md  arch-health-queries-qa.md  arch-health-queries-review.json  arch-health-queries-reviewer.md  arch-health-queries-ship-gate.md  arch-health-queries-spec.md  arch-health-queries-state.json  (+67 more)
test/: dune  test_arch_compare.ml  test_arch_coverage.ml  test_arch_index_compare.ml  test_arch_mcp.ml  test_capabilities.ml  test_cfg.ml  test_effects.ml  test_parsers.ml
test/fixtures/: self-index-stats.txt
(+110 files in other folders)
