(test
 (name test_parsers)
 (modules test_parsers)
 (libraries arch_index alcotest))

(test
 (name test_effects)
 (modules test_effects)
 (libraries arch_effects alcotest sqlite3))

(test
 (name test_capabilities)
 (modules test_capabilities)
 (libraries arch_effects alcotest sqlite3))

(test
 (name test_arch_compare)
 (modules test_arch_compare)
 (libraries arch_compare alcotest))

(test
 (name test_arch_mcp)
 (modules test_arch_mcp)
 (libraries arch_mcp alcotest sqlite3 yojson))

(test
 (name test_arch_index_compare)
 (modules test_arch_index_compare)
 (libraries arch_index alcotest sqlite3 unix))
